--- a/A3.ipynb
+++ b/A3.ipynb
@@ -50,7 +50,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Github link :"
+        "Github link : https://github.com/msjxh/UTS_ML2019_ID13145685/blob/master/A3.ipynb"
       ]
     },
     {
