--- a/A3.ipynb
+++ b/A3.ipynb
@@ -180,7 +180,7 @@
         "colab_type": "text"
       },
       "source": [
-        "![alt text](https://)"
+        "<img src=\"https://github.com/msjxh/UTS_ML2019_ID13145685/blob/master/WX20191009-230946%402x.png?raw=true\" width=\"500\"/>"
       ]
     },
     {
